--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <!-- font awesome  -->
+  <script src="https://kit.fontawesome.com/3776a45bd3.js" crossorigin="anonymous"></script>
+  
   <title>Car App</title>
 </head>
 
