--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- font awesome  -->
   <script src="https://kit.fontawesome.com/3776a45bd3.js" crossorigin="anonymous"></script>
   
-  <title>Car App</title>
+  <title>AppSus</title>
 </head>
 
 <body>
