--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <!-- font awesome  -->
   <script src="https://kit.fontawesome.com/3776a45bd3.js" crossorigin="anonymous"></script>
 
-  
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./assets/img/logo/favicon.ico" type="image/x-icon">
+
   <title>AppSus</title>
 </head>
 
